<resources>
    <string name="app_name">SucharyPL</string>
    <string name="lorem_ipsum_mid">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla molestie sit amet enim maximus elementum. Vestibulum fringilla nisl quis risus consequat bibendum. Donec at erat imperdiet, rhoncus libero at, accumsan nisl. Quisque porttitor tortor ut nunc finibus, sit amet laoreet est molestie.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--

        MULTIPLE USAGE

    -->
    <string name="add_filter_label">Add new</string>

    <!--

        MAIN MENU

    -->
    <string name="main_menu_title_random">Random</string>
    <string name="main_menu_title_fav">Favourites</string>
    <string name="main_menu_title_cat">Categories</string>
    <string name="main_menu_title_online">Online</string>
    <string name="main_menu_title_learn">Master of jokes</string>
    <string name="main_menu_title_shop">Shop</string>

    <!--

        RANDOM JOKES

    -->
    <string name="random_jokes_title">Random Jokes</string>
    <string name="btn_show_random">Random</string>
    <string name="btn_show_continue">Continue</string>
    <string name="select_word_long">Long</string>
    <string name="select_word_short">Short</string>
    <string name="available_filters">Filters:</string>
    <string name="available_categories">Categories:</string>

    <!--

        DISPLAY JOKE

    -->
    <string name="dialog_fav_cancel">Cancel</string>
    <string name="dialog_fav_save">Save</string>
    <string name="dialog_favourites_header">Add to favourites</string>

    <string name="dialog_fav_remove_title">Are you sure that it\'s not your favourite joke?</string>
    <string name="dialog_fav_remove_no">No</string>
    <string name="dialog_fav_remove_yes">Yes</string>

    <string name="dialog_confirm_yes">Yes</string>
    <string name="dialog_confirm_no">No</string>
    <string name="dialog_confirm_learn_add">Do you really want to add this joke to your learning list?</string>
    <string name="dialog_confirm_learn_remove">Do you really want to remove this joke from your list to learn?</string>

    <!--

        REPORT JOKE

    -->
    <string name="report_category_typo">Typo</string>
    <string name="report_category_offensive">Offensive</string>
    <string name="report_category_copyright">Copyright</string>
    <string name="report_category_other">Other</string>

    <string name="dialog_report_title">Report form</string>
    <string name="dialog_report_category">Reason:</string>
    <string name="dialog_report_btn_report">Report</string>
    <string name="dialog_report_btn_cancel">Cancel</string>
    <string name="report_toast">Thank you for help!</string>

    <!--

        NEW FILTER

    -->
    <string name="dialog_new_filter_header">New filter</string>
    <string name="dialog_new_filter_field">Name</string>
    <string name="dialog_new_filter_save">Add</string>
    <string name="dialog_new_filter_cancel">Cancel</string>
    <string name="new_filter_exists">This filter already exists</string>


</resources>
